--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
       </table> -->
       <div class="grid-container">
         <div class="item1">
-          <img src="asset/1.jpeg" width="230px" />
+          <img src="1.jpeg" width="230px" />
         </div>
         <div class="item2">
-          <img src="asset/2.jpeg" width="230px" />
+          <img src="2.jpeg" width="230px" />
         </div>
         <div class="item3">
-          <img src="asset/3.jpeg" width="230px" />
+          <img src="3.jpeg" width="230px" />
         </div>
       </div>
     </section>
